# asset-generator

./: Cargo.toml
src/: main.rs
