[package]
name = "asset_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.13.1"
actix-web = "4"
redis = "0.24.0"
bytes = "1.5.0"
env_logger = "0.10.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]